force-app/main/default/objects/Detection_Rule__mdt/Detection_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Catalog of SecOps detection rules executed by scan runs.</description>
    <label>Detection Rule</label>
    <pluralLabel>Detection Rules</pluralLabel>
</CustomObject>