force-app/main/default/objects/Detection_Rule__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Apex class name that implements this detection rule.</description>
    <label>Apex Class</label>
    <length>120</length>
    <type>Text</type>
</CustomField>