force-app/main/default/objects/Detection_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>High-level grouping for the detection rule.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login Anomaly</fullName>
            </value>
            <value>
                <fullName>OAuth Risk</fullName>
            </value>
            <value>
                <fullName>ConnectedApp Drift</fullName>
            </value>
            <value>
                <fullName>Privilege Escalation</fullName>
            </value>
            <value>
                <fullName>Setup Change</fullName>
            </value>
            <value>
                <fullName>Baseline Deviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>