force-app/main/default/objects/Detection_Rule__mdt/fields/Default_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Default_Risk_Score__c</fullName>
    <description>Default risk score (0-999) applied to findings from this rule.</description>
    <label>Default Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>