force-app/main/default/objects/Detection_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What this rule detects and why it matters.</description>
    <label>Description</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>