force-app/main/default/objects/Detection_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If false, the rule is skipped during scans.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>