force-app/main/default/objects/Detection_Rule__mdt/fields/Remediation_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Guidance__c</fullName>
    <description>Suggested remediation steps surfaced on resulting findings.</description>
    <label>Remediation Guidance</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>