force-app/main/default/objects/Detection_Rule__mdt/fields/Required_Capability__c.field-meta.xml
<CustomField>
    <fullName>Required_Capability__c</fullName>
    <description>Optional capability flag that must be true for this rule to run.</description>
    <label>Required Capability</label>
    <length>80</length>
    <type>Text</type>
</CustomField>