force-app/main/default/objects/Detection_Rule__mdt/fields/Run_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Run_Frequency__c</fullName>
    <description>How often this rule should run relative to a scan cycle.</description>
    <label>Run Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Run</fullName>
                <default>true</default>
                <label>Every Run</label>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>